fix meetup item title gap

--- a/src/app/components/meetup-item/meetup-item.component.scss
+++ b/src/app/components/meetup-item/meetup-item.component.scss
@@ -48,7 +48,7 @@
     width: 70%;
     display: flex;
     align-items: center;
-    column-gap: 5%;
+    column-gap: 20px;
     white-space: nowrap;
   }
 
